# fastapi-template

./: .dockerignore  .env.example  .env.generated  .gitignore  .pre-commit-config.yaml  BEST_PRACTICES.md  Dockerfile  Dockerfile.improved  PRODUCTION_READINESS.md  QUICKSTART.md  QUICK_WINS.md  README.md  SUMMARY.md  TASKS_GUIDE.md  TEST_COVERAGE_REVIEW.md  alembic.ini  cliff.toml  codecov.yml  demo_api.sh  docker-compose.yml  docker-entrypoint.sh  fix_g004_bulk.py  fix_g004_simple.py  junit-unit.xml  logging.json  pyproject.toml  pyrightconfig.json  pytest.ini
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  security.yml
alembic/: README.md  env.py  inject_fts.py  script.py.mako
alembic/versions/: 20251126_0405_0fae80f19092_updated_many_to_many_example.py  20251202_0059_dd5ec4279527_add_recurrence_fields_to_reminders.py  20251209_0001_add_ai_agent_tables.py  20251210_1747_43c3ce68c327_initial_schema.py  20251210_1749_10527cfd05ed_all_tables.py  20251210_2112_add_admin_audit_table.py  20251210_2112_ba51709f4161_add_notifications.py  20251211_0222_0fccb9bc6eb7_initial_migration.py  20251211_0317_6b6d02c48e18_merge_admin_audit_and_notifications.py  6c70eb111478_add_all_tables.py  8799a08c3b18_create_initial.py  a1b2c3d4e5f6_add_files_and_webhooks.py  b2c3d4e5f6a7_add_event_outbox.py  c3d4e5f6a7b8_add_reminder_search_vector.py  d4e5f6a7b8c9_create_task_executions.py  e5f6a7b8c9d0_create_audit_logs.py  f6a7b8c9d0e1_create_feature_flags.py  g7h8i9j0k1l2_add_fts_to_posts_and_users.py
conf/: .gitignore  README.md  app.yaml  auth.dev.yaml.example  db.yaml  logging.json  logging.yaml  logging.yaml.example  otel.yaml  rabbit.yaml  redis.yaml
conf/app.d/: 01-cors.yml
deployment/: docker-compose.yml
deployment/configs/: .gitkeep
deployment/configs/alertmanager/: README.md  alertmanager.yml
deployment/configs/alloy/: config.alloy
deployment/docker/: docker-compose.yml
docs/: ARCHIVE_REPOSITORY_PATTERN_EXPLORATION.md  CLI_ENHANCEMENTS.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  DATABASE_ARCHITECTURE.md  DATABASE_DIRECT_SQLALCHEMY.md  DEPLOYMENT_VALIDATION.md  DOCKER_MIGRATIONS.md  EVALUATION_REPORT.md  EXPORT_WORKERS_USAGE.md  IMPROVEMENTS.md  LOGGING_FUTURE_ENHANCEMENTS.md  MIDDLEWARE_ARCHITECTURE.md  MONITORING_SETUP.md  PHASE_3_SUMMARY.md  QUICK_START_IMPROVEMENTS.md  README.md  SECURITY_CONFIGURATION.md  admin-settings.md  datatransfer-acl-quickstart.md  email-deployment-guide.md
docs/ai/: AI_ARCHITECTURE.md  ARCHITECTURE.md
docs/architecture/: database-base-classes.md  database-model-refactoring-summary.md  final-architecture.md  multi-tenancy.md  overview.md
docs/archive/: DATABASE_MIGRATION_SUMMARY.md  accent-voice2-comparison.md  enhancements-completed.md  implementation-summary.md  improvements-summary.md  template-enhancements-complete.md  test-verification-report.md
docs/database/: DATABASE_GUIDE.md  quick-reference.md
docs/deployment/: kubernetes.md
docs/development/: best-practices.md  development-mode.md  feature-template.md  fts-setup-guide.md  graphql-features.md  mypy-type-stubs-explanation.md  setup.md  testing.md
docs/features/: accent-ai-features.md  health-checks.md  optional-dependencies.md  storage.md
docs/getting-started/: getting-started.md
docs/graphql/: PHASE_3_COMPLETION.md
docs/integrations/: accent-auth-integration.md  accent-auth-lifespan.md  accent-auth-summary.md  using-accent-auth-client.md
docs/messaging/: accent-bus-additional-patterns.md  accent-bus-patterns-review.md  faststream-migration-checklist.md  faststream-patterns.md
docs/middleware/: correlation-id-usage.md  debug-middleware-production-example.md  debug-middleware.md  i18n-examples.md  i18n-middleware.md  middleware-guide.md  n-plus-one-detection.md  request-logging-enhancements.md  security-headers-enhancements.md
docs/notifications/: PHASE5_QUICK_START.md
docs/operations/: kubernetes.md  production-deployment-checklist.md  rabbitmq-file-descriptors.md
docs/patterns/: circuit-breaker.md
docs/reference/: cli-readme.md
docs/testing/: testing-guide.md  testing-infrastructure.md
example_service/: __init__.py  main.py
example_service/app/: __init__.py  docs.py  exception_handlers.py  lifespan.py  main.py  middleware.py  router.py
example_service/cli/: __init__.py  main.py
example_service/core/: __init__.py  exceptions.py  settings.py
example_service/features/: __init__.py
example_service/infra/: __init__.py
example_service/tasks/: __init__.py  broker.py  cli.py  middleware.py  scheduler.py  tasks.py  tracking.py
example_service/utils/: __init__.py  retry.py  runtime_dependencies.py  updates.py
example_service/workers/: __init__.py  tasks.py
k8s/: deployment.yaml
load_tests/: README.md  locustfile.py
load_tests/k6/: scenarios.js
scripts/: add_recurrence_columns.py  free-ports.sh  manage_migrations.sh
scripts/linting/: __init__.py  logging_checks.py  no_db_in_router.py  openapi_checks.py
tests/: MIDDLEWARE_TEST_SUITE_SUMMARY.md  conftest.py  conftest.py.bak  utils.py
tests/e2e/: test_app_end_to_end.py
tests/examples/: README.md  __init__.py  test_extensibility_example.py
tests/features/: test_file_service.py  test_reminder_repository.py  test_reminder_service.py
tests/fixtures/: __init__.py  auth_fixtures.py
tests/graphql/: __init__.py  conftest.py  test_mutations.py  test_performance.py  test_pydantic_integration.py  test_queries.py  test_schema.py
tests/integration/: README_INTEGRATION_TESTS.md  TEST_ADMIN_DATABASE_API_SUMMARY.md  TEST_SUMMARY.md  conftest.py  test_accent_auth.py  test_admin_database_api.py  test_agent_api.py  test_ai_pipeline_router.py  test_api.py  test_containerized_api.py  test_datatransfer_unified.py  test_health_endpoints.py  test_middleware.py  test_new_features_integration.py  test_search_integration.py  test_tasks_integration.py
tests/load_tests/: README.md  locustfile.py
tests/performance/: __init__.py  conftest.py  test_database.py  test_serialization.py
tools/linting/: logging_checks.py  no_db_in_router.py  no_http_exception.py  openapi_checks.py
(+848 files in other folders)
