[project]
name = "example-service"
version = "0.1.0"
description = "FastAPI service template following standard architecture"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.122.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic[email]>=2.9.0",
    "pydantic-settings>=2.5.0",
    "sqlalchemy[asyncio]>=2.0.44",
    "alembic>=1.17.2",
    "psycopg[binary,pool]>=3.2.0",
    "redis[hiredis]>=5.1.0",
    "httpx>=0.28.1",
    "prometheus-client>=0.21.0",
    "python-multipart>=0.0.12",
    "click>=8.1.0",
    # OpenTelemetry
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-httpx>=0.48b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.48b0",
    "opentelemetry-instrumentation-psycopg>=0.48b0",
    "opentelemetry-exporter-otlp>=1.27.0",
    # Messaging and Tasks
    "faststream[otel,prometheus,rabbit]>=0.5.0",
    "taskiq>=0.11.0",
    "taskiq-faststream>=0.3.0",
    "apscheduler>=3.10.0",
    "taskiq-aio-pika>=0.4.4",
    # GraphQL
    "strawberry-graphql[fastapi]>=0.235.0",
    # Recurrence rules (iCalendar RRULE)
    "python-dateutil>=2.9.0",
    "pwdlib[argon2]>=0.3.0",
    # Email
    "aiosmtplib>=3.0.0",
    "jinja2>=3.1.0",
    "taskiq-redis>=1.1.2",
    "taskiq-postgresql>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "aiosqlite>=0.20.0",
    "testcontainers>=4.9.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]
yaml = ["pyyaml>=6.0.0"]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-benchmark>=4.0.0",
    "aiosqlite>=0.20.0",
    "testcontainers>=4.9.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "types-pyyaml>=6.0.12.20250915",
    "types-python-dateutil>=2.9.0.20251115",
    "types-redis>=4.6.0.20241004",
]
tests = ["httpx>=0.28.1"]
loadtest = [
    "locust>=2.29.0",
]

[project.scripts]
example-service = "example_service.cli:main"
example-service-main = "example_service.main:main"

[project.entry-points.taskiq_cli]
track = "example_service.tasks.cli:TrackingCommand"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "example_service/static/docs/**",
    "example_service/static/graphql/**",
]

[tool.hatch.build.targets.wheel]
packages = ["example_service"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=example_service",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-branch",
    "--ignore=**/examples/*",
    "-v",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
    "asyncio: Async tests",
    "benchmark: Performance benchmark tests",
]
norecursedirs = [
    ".git",
    ".venv",
    "__pycache__",
    "*.egg-info",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
    "htmlcov",
    "logs",
    "examples",
]

[tool.coverage.run]
source = ["example_service"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
    "example_service/cli/*",
    "example_service/tasks/*",
    "example_service/infra/*",
    "example_service/workers/*",
    "example_service/main.py",
    "example_service/core/*",
    "example_service/features/admin/*",
    "example_service/features/metrics/*",
    "example_service/features/status/*",
    "example_service/features/health/*",
    "example_service/features/reminders/*",
    "example_service/features/files/*",
    "example_service/features/graphql/*",
    "example_service/features/webhooks/*",
    "example_service/utils/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "*.egg-info",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
    "**/examples/*",
    "scripts",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "TC",  # flake8-type-checking
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
# SQLAlchemy models evaluate annotations at runtime, so keep imports available
"**/models.py" = [
    "TC001", # typing-only first-party import
    "TC002", # typing-only third-party import
    "TC003", # typing-only standard-library import
]
# Pydantic schemas evaluate annotations at runtime, so keep imports available
"**/schemas.py" = [
    "TC001", # typing-only first-party import
    "TC002", # typing-only third-party import
    "TC003", # typing-only standard-library import
]
# Strawberry GraphQL types evaluate annotations at runtime, so keep imports available
"**/graphql/types/*.py" = [
    "TC001", # typing-only first-party import
    "TC002", # typing-only third-party import
    "TC003", # typing-only standard-library import
]
# Strawberry GraphQL resolvers evaluate annotations at runtime, so keep imports available
"**/graphql/resolvers/*.py" = [
    "TC001", # typing-only first-party import
    "TC002", # typing-only third-party import
    "TC003", # typing-only standard-library import
]

# Alembic migrations: relax rules for autogenerated code
"alembic/versions/*.py" = [
    "F401",   # Unused imports - op/sa imported for convenience
    "ARG001", # Unused function argument - empty upgrade/downgrade
    "E501",   # Line too long - autogenerated table definitions
    "I001",   # Import block is unsorted/unformatted
    "UP007",  # Use X | Y for type annotations (migrations may target older Python)
    "TC001",  # Move application import into TYPE_CHECKING block
    "TC002",  # Move third-party import into TYPE_CHECKING block
    "TC003",  # Move standard library import into TYPE_CHECKING block
]
# Alembic env.py: configuration file with specific patterns
"alembic/env.py" = [
    "F401",  # Unused imports - may be used in generated migrations
    "E402",  # Module level import not at top of file
    "TC001", # typing-only first-party import
]
# Test files: more relaxed rules for fixtures and test patterns
"tests/**/*.py" = [
    "ARG001", # Unused function argument - fixtures often unused directly
    "ARG002", # Unused method argument - test helpers/mocks
    "ARG005", # Unused lambda argument - test assertions
    "B008",   # Function call in argument defaults - pytest fixtures
    "S101",   # Use of assert - standard in pytest
    "S105",   # Possible hardcoded password - test credentials
    "S106",   # Possible hardcoded password - test credentials
    "SIM102", # Use a single if statement instead of nested if - readability in test assertions
    "SIM116", # Use a dictionary instead of consecutive if - readability in test mocks
    "SIM117", # Use single with statement - readability in tests
    "TC001",  # Move application import into TYPE_CHECKING block
    "TC002",  # Move third-party import into TYPE_CHECKING block
    "TC003",  # Move standard library import into TYPE_CHECKING block
]
# Test conftest files: fixture definitions have specific patterns
"tests/**/conftest.py" = [
    "F401", # Unused import - fixtures imported for pytest registration
    "F811", # Redefinition of unused name - fixture overrides
]

[tool.ruff.lint.flake8-type-checking]
# Declarative base classes must see annotations at runtime (e.g. datetime, uuid)
runtime-evaluated-base-classes = [
    "example_service.core.database.Base",
    "example_service.core.database.TimestampedBase",
    "example_service.core.database.UUIDTimestampedBase",
    "example_service.core.database.AuditedBase",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["example_service"]

[tool.mypy]
python_version = "3.12"
files = ["example_service", "tests", "alembic"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
plugins = ["pydantic.mypy"]
exclude = ["^alembic/env\\.py$", ".*/examples/.*", "^scripts/"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
ignore_errors = true

[[tool.mypy.overrides]]
module = "alembic.versions.*"
ignore_errors = true

[[tool.mypy.overrides]]
# SQLAlchemy models rely on runtime imports for annotation evaluation
module = "example_service.*.models"
ignore_errors = true

[[tool.mypy.overrides]]
module = ["alembic.*", "alembic.env"]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "botocore.*",
    "cryptography.*",
    "dateutil.*",
    "netifaces",
    "yaml",
    "IPython",
]
ignore_missing_imports = true

[tool.alembic]
script_location = "alembic"
prepend_sys_path = "."
file_template = "%%(year)d%%(month).2d%%(day).2d_%%(hour).2d%%(minute).2d_%%(rev)s_%%(slug)s"
truncate_slug_length = 40
timezone = "UTC"

[[tool.alembic.post_write_hooks]]
name = "ruff_format"
type = "exec"
executable = "uv"
options = "run ruff format REVISION_SCRIPT_FILENAME"

[[tool.alembic.post_write_hooks]]
name = "ruff_fix"
type = "exec"
executable = "uv"
options = "run ruff check --fix REVISION_SCRIPT_FILENAME"
