[project]
name = "example-service"
version = "0.1.0"
description = "FastAPI service template following standard architecture"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
keywords = [
    "fastapi",
    "async",
    "microservice",
    "graphql",
    "sqlalchemy",
    "opentelemetry",
    "taskiq",
    "strawberry",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Framework :: FastAPI",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
# Uncomment and update these URLs if you have a repository
# [project.urls]
# Homepage = "https://github.com/yourusername/example-service"
# Documentation = "https://github.com/yourusername/example-service#readme"
# Repository = "https://github.com/yourusername/example-service"
# Issues = "https://github.com/yourusername/example-service/issues"

dependencies = [
    # Core FastAPI framework
    "fastapi>=0.122.0",
    "uvicorn[standard]>=0.34.0",
    # Data validation and settings
    "pydantic[email]>=2.9.0",
    "pydantic-settings>=2.5.0",
    # Database and ORM
    "sqlalchemy[asyncio]>=2.0.44",
    "alembic>=1.17.2",
    "alembic-postgresql-enum>=1.8.0",
    "psycopg[binary,pool]>=3.2.0",
    "redis[hiredis]>=5.1.0",
    "httpx>=0.28.1",
    "prometheus-client>=0.21.0",
    "python-multipart>=0.0.12",
    "click>=8.1.0",
    # OpenTelemetry
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "opentelemetry-instrumentation-httpx>=0.49b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.49b0",
    "opentelemetry-instrumentation-psycopg>=0.49b0",
    "opentelemetry-exporter-otlp>=1.28.0",
    # Messaging and Tasks
    "faststream[otel,prometheus,rabbit]>=0.6.0",
    "taskiq>=0.11.0",
    "taskiq-faststream>=0.3.0",
    "apscheduler>=3.10.0",
    "taskiq-aio-pika>=0.4.4",
    # GraphQL
    "strawberry-graphql[fastapi]>=0.235.0",
    # Recurrence rules (iCalendar RRULE)
    "python-dateutil>=2.9.0",
    "pwdlib[argon2]>=0.3.0",
    # Email
    "aiosmtplib>=3.0.0",
    "jinja2>=3.1.0",
    "taskiq-redis>=1.1.2",
    "taskiq-postgresql>=0.4.0",
    "frozendict>=2.4.0",
    "phonenumbers>=9.0.19",
    "instructor>=1.13.0",
]

[project.optional-dependencies]
# Development dependencies (for local development)
dev = ["ruff>=0.7.0", "mypy>=1.13.0", "pre-commit>=4.0.0"]
# Testing dependencies
tests = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.1.1",
    "pytest-benchmark>=4.0.0",
    "aiosqlite>=0.20.0",
    "testcontainers[postgres,redis,rabbitmq]>=4.9.0",
    "httpx>=0.28.1",
]
# YAML support
yaml = ["pyyaml>=6.0.0"]
# Excel support
excel = ["openpyxl>=3.1.0"]
# AI/ML dependencies
ai = ["openai>=1.50.0", "anthropic>=0.39.0", "deepgram-sdk>=3.7.0"]
# Cryptographic support for EncryptedString/EncryptedText types
crypto = ["cryptography>=41.0.0"]
# Load testing
loadtest = ["locust>=2.29.0"]

# Dependency groups (uv-specific, more flexible than optional-dependencies)
# These can include type stubs and development tools
[dependency-groups]
dev = [
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    # Type stubs for better type checking
    "types-pyyaml>=6.0.12.20250915",
    "types-python-dateutil>=2.9.0.20251115",
    "types-redis>=4.6.0.20241004",
    "types-openpyxl>=3.1.0",
    "types-requests>=2.32.0.20241016",
    "types-phonenumbers>=8.13.0.20241016",
]
tests = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.1.1",
    "pytest-benchmark>=4.0.0",
    "aiosqlite>=0.20.0",
    "testcontainers[postgres,redis,rabbitmq]>=4.9.0",
    "httpx>=0.28.1",
]
loadtest = ["locust>=2.29.0"]

[project.scripts]
example-service = "example_service.cli:main"
example-service-main = "example_service.main:main"

[project.entry-points.taskiq_cli]
track = "example_service.infra.tasks.cli:TrackingCommand"

[build-system]
# Using hatchling as the build backend (modern, PEP 517 compliant)
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "example_service/static/docs/**",
    "example_service/static/graphql/**",
]

[tool.hatch.build.targets.wheel]
packages = ["example_service"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=example_service",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-branch",
    "--ignore=**/examples/*",
    "-v",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
    "asyncio: Async tests",
    "benchmark: Performance benchmark tests",
]
norecursedirs = [
    ".git",
    ".venv",
    "__pycache__",
    "*.egg-info",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
    "htmlcov",
    "logs",
    "examples",
]

[tool.coverage.run]
source = ["example_service"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
    "example_service/cli/*",
    "example_service/tasks/*",
    "example_service/infra/*",
    "example_service/workers/*",
    "example_service/main.py",
    "example_service/core/*",
    "example_service/features/admin/*",
    "example_service/features/metrics/*",
    "example_service/features/status/*",
    "example_service/features/health/*",
    "example_service/features/reminders/*",
    "example_service/features/files/*",
    "example_service/features/graphql/*",
    "example_service/features/webhooks/*",
    "example_service/utils/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@overload",
    "if typing.TYPE_CHECKING:",
]
precision = 2
show_missing = true
skip_covered = false
skip_empty = true

[tool.ruff]
line-length = 100
target-version = "py313"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "*.egg-info",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
    "**/examples/*",
    "scripts",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
    "TC",   # flake8-type-checking
    "LOG",  # flake8-logging - logging best practices
    "RUF",  # Ruff-specific rules
    "S",    # flake8-bandit - security checks
    "PT",   # flake8-pytest-style - test conventions
    "PIE",  # flake8-pie - miscellaneous lints
    "PERF", # perflint - performance anti-patterns
    "ERA",  # eradicate - commented-out code
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "S101",    # assert usage - allowed in tests (handled per-file)
    "S104",    # possible binding to all interfaces - intentional for dev
    "S105",    # hardcoded password - false positives with variable names
    "S106",    # hardcoded password in function argument - false positives
    "S311",    # pseudo-random generator - acceptable for non-crypto uses
    "PERF401", # Using a list comprehension to unpack - readability preference
    "ERA001",  # Commented-out code - may be intentional for documentation
]

[tool.ruff.lint.per-file-ignores]
# SQLAlchemy models evaluate annotations at runtime, so keep imports available
"**/models.py" = [
    "TC001", # typing-only first-party import
    "TC002", # typing-only third-party import
    "TC003", # typing-only standard-library import
]
# Pydantic schemas evaluate annotations at runtime, so keep imports available
"**/schemas.py" = [
    "TC001", # typing-only first-party import
    "TC002", # typing-only third-party import
    "TC003", # typing-only standard-library import
]
# Strawberry GraphQL types evaluate annotations at runtime, so keep imports available
"**/graphql/types/*.py" = [
    "TC001", # typing-only first-party import
    "TC002", # typing-only third-party import
    "TC003", # typing-only standard-library import
]
# Strawberry GraphQL resolvers evaluate annotations at runtime, so keep imports available
"**/graphql/resolvers/*.py" = [
    "TC001", # typing-only first-party import
    "TC002", # typing-only third-party import
    "TC003", # typing-only standard-library import
]

# Alembic migrations: relax rules for autogenerated code
"alembic/versions/*.py" = [
    "F401",   # Unused imports - op/sa imported for convenience
    "ARG001", # Unused function argument - empty upgrade/downgrade
    "E501",   # Line too long - autogenerated table definitions
    "I001",   # Import block is unsorted/unformatted
    "UP007",  # Use X | Y for type annotations (migrations may target older Python)
    "TC001",  # Move application import into TYPE_CHECKING block
    "TC002",  # Move third-party import into TYPE_CHECKING block
    "TC003",  # Move standard library import into TYPE_CHECKING block
]
# Alembic env.py: configuration file with specific patterns
"alembic/env.py" = [
    "F401",  # Unused imports - may be used in generated migrations
    "E402",  # Module level import not at top of file
    "TC001", # typing-only first-party import
]
# Test files: more relaxed rules for fixtures and test patterns
"tests/**/*.py" = [
    "ARG001", # Unused function argument - fixtures often unused directly
    "ARG002", # Unused method argument - test helpers/mocks
    "ARG005", # Unused lambda argument - test assertions
    "B008",   # Function call in argument defaults - pytest fixtures
    "F401",   # Unused import - tests may import to verify importability
    "S101",   # Use of assert - standard in pytest
    "S105",   # Possible hardcoded password - test credentials
    "S106",   # Possible hardcoded password - test credentials
    "S110",   # try-except-pass - intentional in tests for failure path testing
    "S603",   # subprocess call - safe in test fixtures (e.g., Docker CLI)
    "S608",   # SQL injection - false positive for test query simulation
    "SIM102", # Use a single if statement instead of nested if - readability in test assertions
    "SIM116", # Use a dictionary instead of consecutive if - readability in test mocks
    "SIM117", # Use single with statement - readability in tests
    "RUF012", # Mutable ClassVar - false positive for SQLAlchemy __table_args__
    "TC001",  # Move application import into TYPE_CHECKING block
    "TC002",  # Move third-party import into TYPE_CHECKING block
    "TC003",  # Move standard library import into TYPE_CHECKING block
]
# Test conftest files: fixture definitions have specific patterns
"tests/**/conftest.py" = [
    "F401", # Unused import - fixtures imported for pytest registration
    "F811", # Redefinition of unused name - fixture overrides
]
# Database utilities: use validated identifiers (safe_table_reference, validate_identifier)
# SQL identifiers cannot be parameterized, so validated identifiers are used in f-strings
"example_service/core/database/search/utils.py" = [
    "S608", # SQL injection - false positive, identifiers validated via safe_table_reference
]
"example_service/core/database/search/mixins.py" = [
    "S608", # SQL injection - false positive, identifiers validated via safe_table_reference/validate_identifier
]
"example_service/infra/database/schema.py" = [
    "S608", # SQL injection - false positive, identifiers validated via safe_table_reference/validate_identifier
]
"example_service/cli/commands/search.py" = [
    "S608", # SQL injection - false positive, identifiers validated via safe_table_reference
]

[tool.ruff.lint.flake8-type-checking]
# Declarative base classes must see annotations at runtime (e.g. datetime, uuid)
runtime-evaluated-base-classes = [
    "example_service.core.database.Base",
    "example_service.core.database.TimestampedBase",
    "example_service.core.database.UUIDTimestampedBase",
    "example_service.core.database.AuditedBase",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint.isort]
known-first-party = ["example_service"]
split-on-trailing-comma = true
force-sort-within-sections = true

[tool.mypy]
python_version = "3.13"
files = ["example_service", "tests", "alembic"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
# Strawberry GraphQL plugin for proper type checking of @strawberry decorators
# Pydantic plugin for proper type checking of Pydantic models
plugins = ["strawberry.ext.mypy_plugin", "pydantic.mypy"]
# Settings inspired by Strawberry's own mypy configuration
implicit_reexport = false
strict_optional = true
show_error_codes = true
install_types = false
show_traceback = true
exclude = ["^alembic/env\\.py$", ".*/examples/.*", "^scripts/"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
ignore_errors = true

[[tool.mypy.overrides]]
# Strawberry GraphQL decorators add fields/methods at runtime
# The strawberry.ext.mypy_plugin helps, but some patterns still need relaxed checking
# These overrides can potentially be reduced as the plugin improves
module = "example_service.features.graphql.types.*"
disable_error_code = [
    "call-arg",
    "attr-defined",
    "misc",
    "import-not-found",
    "no-any-return",
    "no-untyped-def",
    "type-var",
    "valid-type",
    "name-defined",
]

[[tool.mypy.overrides]]
# GraphQL resolvers may need relaxed checking for dynamic schema composition
# The strawberry.ext.mypy_plugin helps with standard patterns
module = "example_service.features.graphql.resolvers.*"
disable_error_code = [
    "call-arg",
    "attr-defined",
    "import-not-found",
    "no-any-return",
    "assignment",
    "arg-type",
    "valid-type",
    "comparison-overlap",
    "name-defined",
]

[[tool.mypy.overrides]]
module = "example_service.features.graphql.*"
disable_error_code = ["import-not-found"]

[[tool.mypy.overrides]]
# Extensions, validators, dataloaders and caching have pre-existing type annotation gaps
# Plus strawberry-specific patterns (enums, unions, JSON scalars)
module = [
    "example_service.features.graphql.extensions.*",
    "example_service.features.graphql.validators",
    "example_service.features.graphql.caching.*",
    "example_service.features.graphql.dataloaders.*",
    "example_service.features.graphql.types.pagination",
    "example_service.features.graphql.error_handler",
    "example_service.features.graphql.permissions",
    "example_service.features.graphql.router",
    "example_service.features.graphql.schema",
    "example_service.features.graphql.context",
]
disable_error_code = [
    "no-untyped-def",
    "import-untyped",
    "unused-ignore",
    "no-any-return",
    "arg-type",
    "attr-defined",
    "assignment",
    "operator",
    "valid-type",
    "misc",
    "override",
    "call-overload",
    "comparison-overlap",
    "typeddict-item",
]

[[tool.mypy.overrides]]
module = "alembic.versions.*"
ignore_errors = true

[[tool.mypy.overrides]]
# SQLAlchemy models rely on runtime imports for annotation evaluation
module = "example_service.*.models"
ignore_errors = true

[[tool.mypy.overrides]]
module = ["alembic.*", "alembic.env"]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "botocore.*",
    "cryptography.*",
    "dateutil.*",
    "netifaces",
    "yaml",
    "IPython",
]
ignore_missing_imports = true

# Package-specific ignores inspired by Strawberry's mypy configuration
# These packages either lack type stubs or have known type checking issues
[[tool.mypy.overrides]]
module = [
    "graphql.*",            # graphql-core lacks comprehensive type stubs
    "pydantic_core.*",      # Internal Pydantic implementation details
    "rich.*",               # Rich has some type checking gaps
    "libcst.*",             # Code transformation library with type issues
    "email_validator.*",    # Has type checking issues
    "dotenv.*",             # python-dotenv type stubs incomplete
    "cached_property.*",    # Type checking issues with decorators
    "importlib_metadata.*", # Type checking issues
    "anyio.*",              # Async library with some type gaps
    "dns.*",                # DNS library type issues
    "h11.*",                # HTTP/1.1 library type issues
    "httpcore.*",           # HTTP core library type issues
    "idna.*",               # IDNA library type issues
    "markdown_it.*",        # Markdown parser type issues
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "pygments.*", # Syntax highlighting library
]
ignore_missing_imports = true

# Note: We keep pydantic.*, httpx.*, and click.* with full type checking
# as they have good type stubs and the plugins handle them properly

[tool.alembic]
script_location = "alembic"
prepend_sys_path = "."
file_template = "%%(year)d%%(month).2d%%(day).2d_%%(hour).2d%%(minute).2d_%%(rev)s_%%(slug)s"
truncate_slug_length = 40
timezone = "UTC"

[[tool.alembic.post_write_hooks]]
name = "ruff_format"
type = "exec"
executable = "uv"
options = "run ruff format REVISION_SCRIPT_FILENAME"

[[tool.alembic.post_write_hooks]]
name = "ruff_fix"
type = "exec"
executable = "uv"
options = "run ruff check --fix REVISION_SCRIPT_FILENAME"

[tool.pyright]
exclude = ["**/.venv", "**/*.tmpl"]
ignore = [".venv"]
